--- a/source/package.json
+++ b/source/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.3.8",
+        "dayjs": "^1.11.19",
         "vue": "^3.5.26",
         "vuetify": "^3.11.6"
     }
